	* src/tds/login.c(tds_connect): Take in second param 'parent' so callbacks
	can be called before having an established connection.
	* src/ctlib/ct.c: remove call to tds_set_parent and pass into tds_connect
	* src/dblib/dblib.c: remove call to tds_set_parent and pass into 
	tds_connect
	* src/odbc/odbc.c: remove call to tds_set_parent and pass NULL to 
	tds_connect

Thu Oct 25 10:58:38 2001  James Cameron  <quozl@us.netrek.org>

	* configure.in: add include/tds_configs.h to AC_OUTPUT
	
Tue Oct 24 19:07:15 2001 Brian Bruns <camber@ais.org>
    * configure.in: Added AM_CONFIG_HEADER
    * acconfig.h: needed for config header because of BSD_COMP
    * doc/faq/html: made XHTML 1.0 valid
    * src/*/*.c: added config.h include
    * acinclude.m4: iconv autoconf macro

Tue Oct 23 23:42:03 2001 Brian Bruns <camber@ais.org>
    * src/tds/iconv.c: new iconv functions for handling TDS7 unicode
    * src/tds/login.c: tds7_ascii2unicode() and tds7_unicode2ascii() moved to iconv.c
    * aclocal.m4: iconv detection

Sat Oct 20 15:54:28 2001 Brian Bruns <camber@ais.org>

    * src/tds/login.c: error handling for return of inet_addr()
    * doc/userguide.sgml: added freetds.conf and unixODBC sections, minor 
      version updates

Fri Oct 20 10:43:31 Brian Bruns <camber@ais.org>

    * src/tds/config.c: Added optional debugging of server lookup

Fri Oct 19 12:26:02 2001  James Cameron  <quozl@us.netrek.org>

	* README: add users guide pointer.

Fri Oct 19 09:52:22 2001  James Cameron  <quozl@us.netrek.org>

	* NEWS: old ChangeLog placed here. This file is now the release
	notes for the project. Place a one line description of changes
	here.

Fri Oct 19 09:49:58 2001  James Cameron  <quozl@us.netrek.org>

	* ChangeLog: per discussions with Brian, this file now becomes the
	place for developers to write up their changes that are committed
	back to CVS. The file is reverse date order, and is appended to
	semi-automatically by some editors. For example, Emacs key